module-info removed since it breaks the Maven build