@@ -7,6 +7,7 @@ public class HttpClientTest {
 
     // ATTENTION!!! To run this test you need to add the HttpClient mudule to the JVM on startup.
     // This is what needs to be added to the java command
+	// --add-modules jdk.incubator.hhtpclient
     @Test
     public void getGooglePage() throws Exception {
         HttpClientWrapper myWrapper = new HttpClientWrapper();
